#Copyright (c) 2024 Huawei Device Co., Ltd.
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#limitations under the License.

group("componentSevenAttrssTest") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "ace_ets_component_common_seven_attrs_accessibilityDescription:ActsAceEtsComponentCommonSevenAttrsAccessibilityDescriptionTest",
      "ace_ets_component_common_seven_attrs_accessibilityGroup:ActsAceEtsComponentCommonSevenAttrsAccessibilityGroupTest",
      "ace_ets_component_common_seven_attrs_accessibilityLevel:ActsAceEtsComponentCommonSevenAttrsAccessibilityLevelTest",
      "ace_ets_component_common_seven_attrs_accessibilityText:ActsAceEtsComponentCommonSevenAttrsAccessibilityTextTest",
      "ace_ets_component_common_seven_attrs_align:ActsAceEtsComponentCommonSevenAttrsAlignTest",
      "ace_ets_component_common_seven_attrs_backdropBlur:ActsAceEtsComponentCommonSevenAttrsBackdropBlurTest",
      "ace_ets_component_common_seven_attrs_backgroundBlurStyle:ActsAceEtsComponentCommonSevenAttrsBackgroundBlurStyleTest",
      "ace_ets_component_common_seven_attrs_backgroundColor:ActsAceEtsComponentCommonSevenAttrsBackgroundColorTest",
      "ace_ets_component_common_seven_attrs_backgroundImage:ActsAceEtsComponentCommonSevenAttrsBackgroundImageTest",
      "ace_ets_component_common_seven_attrs_backgroundImagePosition:ActsAceEtsComponentCommonSevenAttrsBackgroundImagePositionTest",
      "ace_ets_component_common_seven_attrs_backgroundImageSize:ActsAceEtsComponentCommonSevenAttrsBackgroundImageSizeTest",
      "ace_ets_component_common_seven_attrs_blur:ActsAceEtsComponentCommonSevenAttrsBlurTest",
      "ace_ets_component_common_seven_attrs_border:ActsAceEtsComponentCommonSevenAttrsBorderTest",
      "ace_ets_component_common_seven_attrs_borderColor:ActsAceEtsComponentCommonSevenAttrsBorderColorTest",
      "ace_ets_component_common_seven_attrs_borderImage:ActsAceEtsComponentCommonSevenAttrsBorderImageTest",
      "ace_ets_component_common_seven_attrs_borderRadius:ActsAceEtsComponentCommonSevenAttrsBorderRadiusTest",
      "ace_ets_component_common_seven_attrs_borderStyle:ActsAceEtsComponentCommonSevenAttrsBorderStyleTest",
      "ace_ets_component_common_seven_attrs_borderWidth:ActsAceEtsComponentCommonSevenAttrsBorderWidthTest",
      "ace_ets_component_common_seven_attrs_brightness:ActsAceEtsComponentCommonSevenAttrsBrightnessTest",
      "ace_ets_component_common_seven_attrs_clickEffect:ActsAceEtsComponentCommonSevenAttrsClickEffectTest",
      "ace_ets_component_common_seven_attrs_clip:ActsAceEtsComponentCommonSevenAttrsClipTest",
      "ace_ets_component_common_seven_attrs_colorBlend:ActsAceEtsComponentCommonSevenAttrsColorBlendTest",
      "ace_ets_component_common_seven_attrs_contrast:ActsAceEtsComponentCommonSevenAttrsContrastTest",
      "ace_ets_component_common_seven_attrs_defaultFocus:ActsAceEtsComponentCommonSevenAttrsDefaultFocusTest",
      "ace_ets_component_common_seven_attrs_draggable:ActsAceEtsComponentCommonSevenAttrsDraggableTest",
      "ace_ets_component_common_seven_attrs_enabled:ActsAceEtsComponentCommonSevenAttrsEnabledTest",
      "ace_ets_component_common_seven_attrs_focusOnTouch:ActsAceEtsComponentCommonSevenAttrsFocusOnTouchTest",
      "ace_ets_component_common_seven_attrs_focusable:ActsAceEtsComponentCommonSevenAttrsFocusableTest",
      "ace_ets_component_common_seven_attrs_foregroundBlurStyle:ActsAceEtsComponentCommonSevenAttrsForegroundBlurStyleTest",
      "ace_ets_component_common_seven_attrs_foregroundColor:ActsAceEtsComponentCommonSevenAttrsForegroundColorTest",
      "ace_ets_component_common_seven_attrs_grayscale:ActsAceEtsComponentCommonSevenAttrsGrayscaleTest",
      "ace_ets_component_common_seven_attrs_groupDefaultFocus:ActsAceEtsComponentCommonSevenAttrsGroupDefaultFocusTest",
      "ace_ets_component_common_seven_attrs_height:ActsAceEtsComponentCommonSevenAttrsHeightTest",
      "ace_ets_component_common_seven_attrs_hitTestBehavior:ActsAceEtsComponentCommonSevenAttrsHitTestBehaviorTest",
      "ace_ets_component_common_seven_attrs_hoverEffect:ActsAceEtsComponentCommonSevenAttrsHoverEffectTest",
      "ace_ets_component_common_seven_attrs_hueRotate:ActsAceEtsComponentCommonSevenAttrsHueRotateTest",
      "ace_ets_component_common_seven_attrs_invert:ActsAceEtsComponentCommonSevenAttrsInvertTest",
      "ace_ets_component_common_seven_attrs_lightUpEffect:ActsAceEtsComponentCommonSevenAttrsLightUpEffectTest",
      "ace_ets_component_common_seven_attrs_linearGradient:ActsAceEtsComponentCommonSevenAttrsLinearGradientTest",
      "ace_ets_component_common_seven_attrs_linearGradientBlur:ActsAceEtsComponentCommonSevenAttrsLinearGradientBlurTest",
      "ace_ets_component_common_seven_attrs_mouseResponseRegion:ActsAceEtsComponentCommonSevenAttrsMouseResponseRegionTest",
      "ace_ets_component_common_seven_attrs_obscured:ActsAceEtsComponentCommonSevenAttrsObscuredTest",
      "ace_ets_component_common_seven_attrs_opacity:ActsAceEtsComponentCommonSevenAttrsOpacityTest",
      "ace_ets_component_common_seven_attrs_overlay:ActsAceEtsComponentCommonSevenAttrsOverlayTest",
      "ace_ets_component_common_seven_attrs_pixelStretchEffect:ActsAceEtsComponentCommonSevenAttrsPixelStretchEffectTest",
      "ace_ets_component_common_seven_attrs_position:ActsAceEtsComponentCommonSevenAttrsPositionTest",
      "ace_ets_component_common_seven_attrs_radialGradient:ActsAceEtsComponentCommonSevenAttrsRadialGradientTest",
      "ace_ets_component_common_seven_attrs_renderFit:ActsAceEtsComponentCommonSevenAttrsRenderFitTest",
      "ace_ets_component_common_seven_attrs_renderGroup:ActsAceEtsComponentCommonSevenAttrsRenderGroupTest",
      "ace_ets_component_common_seven_attrs_responseRegion:ActsAceEtsComponentCommonSevenAttrsResponseRegionTest",
      "ace_ets_component_common_seven_attrs_restoreId:ActsAceEtsComponentCommonSevenAttrsRestoreIdTest",
      "ace_ets_component_common_seven_attrs_rotate:ActsAceEtsComponentCommonSevenAttrsRotateTest",
      "ace_ets_component_common_seven_attrs_saturate:ActsAceEtsComponentCommonSevenAttrsSaturateTest",
      "ace_ets_component_common_seven_attrs_scale:ActsAceEtsComponentCommonSevenAttrsScaleTest",
      "ace_ets_component_common_seven_attrs_sepia:ActsAceEtsComponentCommonSevenAttrsSepiaTest",
      "ace_ets_component_common_seven_attrs_shadow:ActsAceEtsComponentCommonSevenAttrsShadowTest",
      "ace_ets_component_common_seven_attrs_sphericalEffect:ActsAceEtsComponentCommonSevenAttrsSphericalEffectTest",
      "ace_ets_component_common_seven_attrs_sweepGradient:ActsAceEtsComponentCommonSevenAttrsSweepGradientTest",
      "ace_ets_component_common_seven_attrs_tabIndex:ActsAceEtsComponentCommonSevenAttrsTabIndexTest",
      "ace_ets_component_common_seven_attrs_touchable:ActsAceEtsComponentCommonSevenAttrsTouchableTest",
      "ace_ets_component_common_seven_attrs_transform:ActsAceEtsComponentCommonSevenAttrsTransformTest",
      "ace_ets_component_common_seven_attrs_translate:ActsAceEtsComponentCommonSevenAttrsTranslateTest",
      "ace_ets_component_common_seven_attrs_useEffect:ActsAceEtsComponentCommonSevenAttrsUseEffectTest",
      "ace_ets_component_common_seven_attrs_width:ActsAceEtsComponentCommonSevenAttrsWidthTest",
      "ace_ets_component_common_seven_attrs_zIndex:ActsAceEtsComponentCommonSevenAttrsZIndexTest",
      "ace_ets_component_seven_special:ActsAceEtsComponentSevenSpecialTest",
      "ace_ets_component_seven_special_static:ActsAceEtsComponentSevenSpecialStaticTest",
      "ace_ets_component_common_seven_attrs_accessibilityGroup_static:ActsAceEtsComponentCommonSevenAttrsAccessibilityGroupStaticTest",
      "ace_ets_component_common_seven_attrs_accessibilityLevel_static:ActsAceEtsComponentCommonSevenAttrsAccessibilityLevelStaticTest",
      "ace_ets_component_common_seven_attrs_backgroundImage_static:ActsAceEtsComponentCommonSevenAttrsBackgroundImageStaticTest",
      "ace_ets_component_common_seven_attrs_border_static:ActsAceEtsComponentCommonSevenAttrsBorderStaticTest",
      "ace_ets_component_common_seven_attrs_borderColor_static:ActsAceEtsComponentCommonSevenAttrsBorderColorStaticTest",
      "ace_ets_component_common_seven_attrs_borderRadius_static:ActsAceEtsComponentCommonSevenAttrsBorderRadiusStaticTest",
      "ace_ets_component_common_seven_attrs_borderStyle_static:ActsAceEtsComponentCommonSevenAttrsBorderStyleStaticTest",
      "ace_ets_component_common_seven_attrs_borderWidth_static:ActsAceEtsComponentCommonSevenAttrsBorderWidthStaticTest",
      "ace_ets_component_common_seven_attrs_brightness_static:ActsAceEtsComponentCommonSevenAttrsBrightnessStaticTest",
      "ace_ets_component_common_seven_attrs_clickEffect_static:ActsAceEtsComponentCommonSevenAttrsClickEffectStaticTest",
      "ace_ets_component_common_seven_attrs_colorBlend_static:ActsAceEtsComponentCommonSevenAttrsColorBlendStaticTest",
      "ace_ets_component_common_seven_attrs_contrast_static:ActsAceEtsComponentCommonSevenAttrsContrastStaticTest",
      "ace_ets_component_common_seven_attrs_defaultFocus_static:ActsAceEtsComponentCommonSevenAttrsDefaultFocusStaticTest",
      "ace_ets_component_common_seven_attrs_draggable_static:ActsAceEtsComponentCommonSevenAttrsDraggableStaticTest",
      "ace_ets_component_common_seven_attrs_enabled_static:ActsAceEtsComponentCommonSevenAttrsEnabledStaticTest",
      "ace_ets_component_common_seven_attrs_focusable_static:ActsAceEtsComponentCommonSevenAttrsFocusableStaticTest",
      "ace_ets_component_common_seven_attrs_focusOnTouch_static:ActsAceEtsComponentCommonSevenAttrsFocusOnTouchStaticTest",
      "ace_ets_component_common_seven_attrs_foregroundColor_static:ActsAceEtsComponentCommonSevenAttrsForegroundColorStaticTest",
      "ace_ets_component_common_seven_attrs_grayscale_static:ActsAceEtsComponentCommonSevenAttrsGrayscaleStaticTest",
      "ace_ets_component_common_seven_attrs_groupDefaultFocus_static:ActsAceEtsComponentCommonSevenAttrsGroupDefaultFocusStaticTest",
      "ace_ets_component_common_seven_attrs_height_static:ActsAceEtsComponentCommonSevenAttrsHeightStaticTest",
      "ace_ets_component_common_seven_attrs_hitTestBehavior_static:ActsAceEtsComponentCommonSevenAttrsHitTestBehaviorStaticTest",
      "ace_ets_component_common_seven_attrs_hoverEffect_static:ActsAceEtsComponentCommonSevenAttrsHoverEffectStaticTest",
      "ace_ets_component_common_seven_attrs_hueRotate_static:ActsAceEtsComponentCommonSevenAttrsHueRotateStaticTest",
      "ace_ets_component_common_seven_attrs_lightUpEffect_static:ActsAceEtsComponentCommonSevenAttrsLightUpEffectStaticTest",
      "ace_ets_component_common_seven_attrs_linearGradientBlur_static:ActsAceEtsComponentCommonSevenAttrsLinearGradientBlurStaticTest",
      "ace_ets_component_common_seven_attrs_obscured_static:ActsAceEtsComponentCommonSevenAttrsObscuredStaticTest",
      "ace_ets_component_common_seven_attrs_opacity_static:ActsAceEtsComponentCommonSevenAttrsOpacityStaticTest",
      "ace_ets_component_common_seven_attrs_overlay_static:ActsAceEtsComponentCommonSevenAttrsOverlayStaticTest",
      "ace_ets_component_common_seven_attrs_pixelStretchEffect_static:ActsAceEtsComponentCommonSevenAttrsPixelStretchEffectStaticTest",
      "ace_ets_component_common_seven_attrs_position_static:ActsAceEtsComponentCommonSevenAttrsPositionStaticTest",
      "ace_ets_component_common_seven_attrs_radialGradient_static:ActsAceEtsComponentCommonSevenAttrsRadialGradientStaticTest",
      "ace_ets_component_common_seven_attrs_renderFit_static:ActsAceEtsComponentCommonSevenAttrsRenderFitStaticTest",
      "ace_ets_component_common_seven_attrs_renderGroup_static:ActsAceEtsComponentCommonSevenAttrsRenderGroupStaticTest",
      "ace_ets_component_common_seven_attrs_responseRegion_static:ActsAceEtsComponentCommonSevenAttrsResponseRegionStaticTest",
      "ace_ets_component_common_seven_attrs_rotate_static:ActsAceEtsComponentCommonSevenAttrsRotateStaticTest",
      "ace_ets_component_common_seven_attrs_saturate_static:ActsAceEtsComponentCommonSevenAttrsSaturateStaticTest",
      "ace_ets_component_common_seven_attrs_scale_static:ActsAceEtsComponentCommonSevenAttrsScaleStaticTest",
      "ace_ets_component_common_seven_attrs_sepia_static:ActsAceEtsComponentCommonSevenAttrsSepiaStaticTest",
      "ace_ets_component_common_seven_attrs_shadow_static:ActsAceEtsComponentCommonSevenAttrsShadowStaticTest",
      "ace_ets_component_common_seven_attrs_sphericalEffect_static:ActsAceEtsComponentCommonSevenAttrsSphericalEffectStaticTest",
      "ace_ets_component_common_seven_attrs_sweepGradient_static:ActsAceEtsComponentCommonSevenAttrsSweepGradientStaticTest",
      "ace_ets_component_common_seven_attrs_tabIndex_static:ActsAceEtsComponentCommonSevenAttrsTabIndexStaticTest",
      "ace_ets_component_common_seven_attrs_transform_static:ActsAceEtsComponentCommonSevenAttrsTransformStaticTest",
      "ace_ets_component_common_seven_attrs_translate_static:ActsAceEtsComponentCommonSevenAttrsTranslateStaticTest",
      "ace_ets_component_common_seven_attrs_useEffect_static:ActsAceEtsComponentCommonSevenAttrsUseEffectStaticTest",
      "ace_ets_component_common_seven_attrs_width_static:ActsAceEtsComponentCommonSevenAttrsWidthStaticTest",
      "ace_ets_component_common_seven_attrs_zIndex_static:ActsAceEtsComponentCommonSevenAttrsZIndexStaticTest",
      "ace_ets_component_common_seven_attrs_restoreId_static:ActsAceEtsComponentCommonSevenAttrsRestoreIdStaticTest",
      "ace_ets_component_common_seven_attrs_accessibilityText_static:ActsAceEtsComponentCommonSevenAttrsAccessibilityTextStaticTest",
      "ace_ets_component_common_seven_attrs_align_static:ActsAceEtsComponentCommonSevenAttrsAlignStaticTest",
      "ace_ets_component_common_seven_attrs_backdropBlur_static:ActsAceEtsComponentCommonSevenAttrsBackdropBlurStaticTest",
      "ace_ets_component_common_seven_attrs_backgroundColor_static:ActsAceEtsComponentCommonSevenAttrsBackgroundColorStaticTest",
      "ace_ets_component_common_seven_attrs_blur_static:ActsAceEtsComponentCommonSevenAttrsBlurStaticTest",
      "ace_ets_component_common_seven_attrs_borderImage_static:ActsAceEtsComponentCommonSevenAttrsBorderImageStaticTest",
      "ace_ets_component_common_seven_attrs_clip_static:ActsAceEtsComponentCommonSevenAttrsClipStaticTest",
      "ace_ets_component_common_seven_attrs_invert_static:ActsAceEtsComponentCommonSevenAttrsInvertStaticTest",
      "ace_ets_component_common_seven_attrs_linearGradient_static:ActsAceEtsComponentCommonSevenAttrsLinearGradientStaticTest"
    ]
  }
}
