# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")

group("resourceschedule_standard") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "backgroundprocessmanager_static:ActsResourcescheduleBackgroundProcessMgrStaticTest",
      "backgroundtaskmanager:resourceschedule_backgroundtaskmanager_js_test",
      "backgroundtaskmanager_ndk:backgroundtaskmanager_ndk_test",
      "backgroundtaskmanager_new:backgroundtaskmanager_new_test",
      "backgroundtaskmanager_new_static:backgroundtaskmanager_new_static_test",
      "backgroundtaskmanager_nop:resourceschedule_backgroundtaskmanager_ets_nop_test",
      "backgroundtaskmanager_nop_static:backgroundtaskmanager_nop_static_test",
      "deviceusagestatisticsjsunit:resourceschedule_deviceusagestatisticsjsunit_js_test",
      "ffrt:resourceschedule_ffrt_js_test",
      "qos_manager:ActsQoSCAPITest",
      "reminderagent:resourceschedule_reminderagent_js_test",
      "reminderagentManager:resourceschedule_reminderagentmgr_js_test",
      "reminderagentManager_static:ActsResourcescheduleReminderAgentMgrStaticTest",
      "reminderagent_nop:resourceschedule_reminderagent_nop_test",
      "workscheduler:resourceschedule_workscheduler_js_test",
      "backgroundtask_errorcode:ActsBackgroundTaskErrorTest",
      "ffrt_type_def:ActsFfrtTypeDefNativeTest"
    ]
  }
}
