# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

ohos_app_assist_suite("ActsDlpNDK20MainTest") {
  testonly = true
  certificate_profile = "./signature/openharmony_sx.p7b"
  hap_name = "ActsDlpNDK20MainTest"
  subsystem_name = "security"
  part_name = "dlp_permission_service"
}

ohos_js_app_suite("ActsDlpNDK20Test") {
  test_hap = true
  testonly = true
  certificate_profile = "./signature/openharmony_sx.p7b"
  hap_name = "ActsDlpNDK20Test"
  subsystem_name = "security"
  part_name = "dlp_permission_service"
  deps = [ ":ActsDlpNDK20MainTest" ]
}
