# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("pageInteraction") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "JS_dialog_box:ActsWebJSDialogBoxTest",
      "JS_dialog_box_static:ActsWebJSDialogBoxStaticTest",
      "base_rendering:ActsWebPageBaseRenderingTest",
      "focus_processing:ActsWebFocusProcessingTest",
      "focus_processing_static:ActsWebFocusProcessingStaticTest",
      "gesture_operation:ActsWebGestureOperationTest",
      "gesture_operation_static:ActsWebGestureOperationStaticTest",
      "keyboard_mouse_operations:ActsWebKeyboardMouseOperationsTest",
      "keyboard_mouse_operations_static:ActsWebKeyboardMouseOperationsStaticTest",
      "page_scrolling:ActsWebPageScrollingTest",
      "page_scrollingOne:ActsWebPageScrollingOneTest",
      "page_scrollingOne_static:ActsWebPageScrollingOneStaticTest",
      "page_scrollingTwo:ActsWebPageScrollingTwoTest",
      "page_scrolling_static:ActsWebPageScrollingStaticTest",
      "picture_text_selection:ActsWebPictureTextSelectionTest",
      "picture_text_selectionThree:ActsWebPictureTextSelectionThreeTest",
      "picture_text_selectionTwo:ActsWebPictureTextSelectionTwoTest",
      "picture_text_selectionTwo_static:ActsWebPictureTextSelectionTwoStaticTest",
      "picture_text_selection_static:ActsWebPictureTextSelectionStaticTest",
      "soft_keyboard_avoidance:ActsWebSoftKeyboardAvoidanceTest",
      "page_interaction_static:ActsWebInteractionStaticTest",
    ]
  }
}
