# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("WebDFXTest") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "log_point_eight:ActsAceWebInternetLogsEventsBreakpointTraceEightTest",
      "log_point_eighteen:ActsAceWebInternetLogsEventsBreakpointTraceEighteenTest",
      "log_point_eleven:ActsAceWebInternetLogsEventsBreakpointTraceElevenTest",
      "log_point_fifteen:ActsAceWebInternetLogsEventsBreakpointTraceFifteenTest",
      "log_point_five:ActsAceWebInternetLogsEventsBreakpointTraceFiveTest",
      "log_point_four:ActsAceWebInternetLogsEventsBreakpointTraceFourTest",
      "log_point_fourteen:ActsAceWebInternetLogsEventsBreakpointTraceFourteenTest",
      "log_point_nine:ActsAceWebInternetLogsEventsBreakpointTraceNineTest",
      "log_point_nineteen:ActsAceWebInternetLogsEventsBreakpointTraceNineteenTest",
      "log_point_one:ActsAceWebInternetLogsEventsBreakpointTraceOneTest",
      "log_point_seven:ActsAceWebInternetLogsEventsBreakpointTraceSevenTest",
      "log_point_seventeen:ActsAceWebInternetLogsEventsBreakpointTraceSeventeenTest",
      "log_point_six:ActsAceWebInternetLogsEventsBreakpointTraceSixTest",
      "log_point_sixteen:ActsAceWebInternetLogsEventsBreakpointTraceSixteenTest",
      "log_point_ten:ActsAceWebInternetLogsEventsBreakpointTraceTenTest",
      "log_point_thirteen:ActsAceWebInternetLogsEventsBreakpointTraceThirteenTest",
      "log_point_three:ActsAceWebInternetLogsEventsBreakpointTraceThreeTest",
      "log_point_twelve:ActsAceWebInternetLogsEventsBreakpointTraceTwelveTest",
      "log_point_twenty:ActsAceWebInternetLogsEventsBreakpointTraceTwentyTest",
      "log_point_twenty_five:ActsAceWebInternetLogsEventsBreakpointTraceTwentyFiveTest",
      "log_point_twenty_four:ActsAceWebInternetLogsEventsBreakpointTraceTwentyFourTest",
      "log_point_twenty_one:ActsAceWebInternetLogsEventsBreakpointTraceTwentyOneTest",
      "log_point_twenty_seven:ActsAceWebInternetLogsEventsBreakpointTraceTwentySevenTest",
      "log_point_twenty_six:ActsAceWebInternetLogsEventsBreakpointTraceTwentySixTest",
      "log_point_twenty_three:ActsAceWebInternetLogsEventsBreakpointTraceTwentyThreeTest",
      "log_point_twenty_two:ActsAceWebInternetLogsEventsBreakpointTraceTwentyTwoTest",
      "log_point_two:ActsAceWebInternetLogsEventsBreakpointTraceTwoTest",
    ]
  }
}
