# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("ActsWebMultiMediaTest") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "internet_video_playback_eight:ActsAceWebInternetVideoPlaybackEightTest",
      "internet_video_playback_eleven:ActsAceWebInternetVideoPlaybackElevenTest",
      "internet_video_playback_five:ActsAceWebInternetVideoPlaybackFiveTest",
      "internet_video_playback_four:ActsAceWebInternetVideoPlaybackFourTest",
      "internet_video_playback_nine:ActsAceWebInternetVideoPlaybackNineTest",
      "internet_video_playback_seven:ActsAceWebInternetVideoPlaybackSevenTest",
      "internet_video_playback_six:ActsAceWebInternetVideoPlaybackSixTest",
      "internet_video_playback_ten:ActsAceWebInternetVideoPlaybackTenTest",
      "internet_video_playback_twelve:ActsAceWebInternetVideoPlaybackTwelveTest",
      "internet_video_playback_one:ActsAceWebInternetVideoPlaybackOneTest",
      "internet_video_playback_two:ActsAceWebInternetVideoPlaybackTwoTest",
      "internet_video_playback_three:ActsAceWebInternetVideoPlaybackThreeTest",
    ]
  }
}
