# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//foundation/arkui/ace_engine/ace_config.gni")

group("ActsAceEtsModuleXNodeTest") {
  testonly = true
  if (ace_engine_feature_wearable) {
    deps = [
      "ace_ets_module_XNode_api12:ActsAceEtsModuleXNodeApi12Test",
      "ace_ets_module_XNode_api14:ActsAceEtsModuleXNodeApi14Test",
      "ace_ets_module_XNode_api15:ActsAceEtsModuleXNodeApi15Test",
      "ace_ets_module_XNode_api16:ActsAceEtsModuleXNodeApi16Test",
      "ace_ets_module_XNode_api20:ActsAceEtsModuleXNodeApi20Test",
      "ace_ets_module_XNode_api21:ActsAceEtsModuleXNodeApi21Test",
      "ace_ets_module_XNode_api22:ActsAceEtsModuleXNodeApi22Test",
      "ace_ets_module_XNode01:ActsAceEtsModuleXNode01Test",
      "ace_ets_module_XNode_api12_static:ActsAceEtsModuleXNodeApi12StaticTest",
      "ace_ets_module_XNode_api14_static:ActsAceEtsModuleXNodeApi14StaticTest",
      "ace_ets_module_XNode_api15_static:ActsAceEtsModuleXNodeApi15StaticTest",
      "ace_ets_module_XNode_api16_static:ActsAceEtsModuleXNodeApi16StaticTest",
      "ace_ets_module_XNode_api20_static:ActsAceEtsModuleXNodeApi20StaticTest",
    ]
  } else {
    deps = [
      "ace_ets_module_XNodeNoWear_api12:ActsAceEtsModuleXNodeNoWearApi12Test",
      "ace_ets_module_XNode_api12:ActsAceEtsModuleXNodeApi12Test",
      "ace_ets_module_XNode_api14:ActsAceEtsModuleXNodeApi14Test",
      "ace_ets_module_XNode_api15:ActsAceEtsModuleXNodeApi15Test",
      "ace_ets_module_XNode_api16:ActsAceEtsModuleXNodeApi16Test",
      "ace_ets_module_XNode_api18:ActsAceEtsModuleXNodeApi18Test",
      "ace_ets_module_XNode_api20:ActsAceEtsModuleXNodeApi20Test",
      "ace_ets_module_XNode_api21:ActsAceEtsModuleXNodeApi21Test",
      "ace_ets_module_XNode_api22:ActsAceEtsModuleXNodeApi22Test",
      "ace_ets_module_XNode01:ActsAceEtsModuleXNode01Test",
      "ace_ets_module_XNodeNoWear:ActsAceEtsModuleXNodeNoWearTest",
      "ace_ets_module_XNode_api12_static:ActsAceEtsModuleXNodeApi12StaticTest",
      "ace_ets_module_XNode_api14_static:ActsAceEtsModuleXNodeApi14StaticTest",
      "ace_ets_module_XNode_api15_static:ActsAceEtsModuleXNodeApi15StaticTest",
      "ace_ets_module_XNode_api16_static:ActsAceEtsModuleXNodeApi16StaticTest",
      "ace_ets_module_XNode_api18_static:ActsAceEtsModuleXNodeApi18StaticTest",

      "ace_ets_module_XNodeNoWear_api12_static:ActsAceEtsModuleXNodeNoWearApi12StaticTest",
    ]
  }
}
